# Aurora

./: CMakeLists.txt  make.bat
dependencies/glad/: Makefile  cmake_install.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/glfw/examples/: Makefile  cmake_install.cmake
dependencies/glfw/src/: Makefile  cmake_install.cmake
dependencies/glfw/tests/: Makefile
dependencies/stb_image/: stb_image_impl.c
src/: Aurora.cpp  Aurora.h  Main.cpp
src/UI/: UI.cpp  UI.h
src/data/: scene.h  transform.h
src/engine/: Shader.cpp  Shader.h
